force-app/main/default/objects/Account/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <description>Salesforce-generated ID for each household</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Household Ref No</label>
    <type>AutoNumber</type>
</CustomField>