force-app/main/default/objects/Account/fields/HenContact__c.field-meta.xml
<CustomField>
    <fullName>HenContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HenContact</label>
    <type>Checkbox</type>
</CustomField>