force-app/main/default/objects/Account/fields/HouseholdNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseholdNumber__c</fullName>
    <formula>TEXT(Market__c) &amp; &quot;-H-&quot; &amp; AutoNumber__c</formula>
    <label>Household Number</label>
    <type>Text</type>
</CustomField>