force-app/main/default/objects/Account/fields/NumberOfAdults__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAdults__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of contacts marked as adults in the household</description>
    <label>Number of Adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>