force-app/main/default/objects/Account/fields/NumberOfChildren__c.field-meta.xml
<CustomField>
    <fullName>NumberOfChildren__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of contacts marked as children in the household</description>
    <label>Number of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>