force-app/main/default/objects/Account/fields/NumberOfHouseholdMembers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfHouseholdMembers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of contacts in the household</description>
    <label>Number of Household Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>