force-app/main/default/objects/Account/fields/NumberOfPrimaryContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPrimaryContacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of contacts marked as primary in the household</description>
    <label>Number of Primary Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>