force-app/main/default/objects/Account/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <label>Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>