force-app/main/default/objects/Account/fields/PrimaryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactEmail__c</fullName>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>