force-app/main/default/objects/Account/fields/PrimaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactPhone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>